--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="utf-8" />
     <!-- Below are the links to the CSS sheet which helps style this page and the Google Fonts style sheet for the Roboto font. -->
     <!-- Voici les liens vers la feuille de style CSS qui aide à modifier l'apparence visuelle de cette page et la feuille de style Google Fonts pour la police Roboto. -->
-    <link rel="stylesheet" type="text/css" href="jsstyle.css">
+    <link rel="stylesheet" type="text/css" href="zhiqizhou.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Meaningful Title or Logo Goes Here</title>
+    <title>Beautiful place in China</title>
   </head>
   <body>
     <!-- The logo and menu are below. Don't touch the <div> and <nav> tags. -->
     <!-- Le logo et le menu sont ci-dessous. Ne touchez pas aux balises <div> et <nav>. -->
     <div class="top-bar">
       <div class="logo">
-        <p>Meaningful Title or Logo Goes Here</p>
+        <p>Beautiful place in China</p>
       </div>
       <nav class="top-menu">
         <ul>
-          <li><a class="current-page-link" href="index.html">Page 1</a></li>
-          <li><a href="page2.html">Page 2</a></li>
-          <li><a href="page3.html">Page 3</a></li>
+          <li><a class="current-page-link" href="index.html">Homepage</a></li>
+          <li><a href="biography.html">Biography</a></li>
+          <li><a href="food.html">Food</a></li>
         </ul>
       </nav>
     </div>
@@ -29,26 +29,22 @@
       <div class="main-section">
     <!-- START Your content should be between this line... -->
     <!-- DÉBUT Votre contenu devrait être entre cette ligne... -->
-        <h1>Heading</h1>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <h1>Yunnan, China</h1>
+        <p>Yunnan Province is located in the south of China. It is also known as the "Spring City" because of its year-round temperature of about 20 degrees.</p>
         <p>Useful links:</p>
         <ol>
-          <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
-          <li><a href="https://jeansebastienmarier.com" target="_blank">My site</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Yunnan" target="_blank">About Yunnan</a></li>
+          <li><a href="https://wikitravel.org/en/Yunnan" target="_blank">Travel to Yunnan</a></li>
         </ol>
-        <h2>Subheading 1</h2>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <h2>Captial City</h2>
+        <p>The capital city of Yunnan is Kunming, a city that has a spring-like season. The temperature is around 20 degrees Celsius throughout the year. As the capital of Yunnan, Kunming receives many tourists every year.</p>
         <figure>
-          <img src="images/pointe-au-pere-1024px.jpg" alt="Phare de la Pointe-au-Père">
-          <figcaption>Le phare de Pointe-au-Père est situé à Rimouski, au Québec. Photo: Jean-Sébastien Marier</figcaption>
+          <img src="images/jinmabiji.jpeg"alt="Jinma Biji Fang in the evening">
+          <figcaption>Jinma Biji Fang, Kunming China. Photo: Zhiqi Zhou</figcaption>
         </figure>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <h2>Subheading 2</h2>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <p>What does "Hello, World!" mean? Here's Wikipedia's answer:</p>
-        <blockquote cite="https://en.wikipedia.org/wiki/%22Hello,_World!%22_program">A "Hello, World!" program is a computer program that outputs or displays "Hello, World!" to a user. Being a very simple program in most programming languages, it is often used to illustrate the basic syntax of a programming language for a working program. It is often the very first program people write when they are new to a language.</blockquote>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>Jinma Biji Fang is a landmark in Kunming. It is also a photo-taking spot for many foreign tourists.</p>
+        <h2>More information about Kunming</h2>
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FGoYunnan.Official%2Fposts%2Fpfbid02usDKbmUA6Gi5KPjScGVDBCLeRq8V4Qt9gYGEriCu529wgJ7uMYbjPUga1W8vg8A7l&show_text=true&width=500" width="500" height="812" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     <!-- ...and this line. END -->
     <!-- ...et cette ligne. FIN -->
       </div>
@@ -57,7 +53,7 @@
       <div class="footer-content">
     <!-- The footer starts here. -->
     <!-- Le crédit de bas de page commence ici. -->
-        <p>©2021 Your Name | <a href="mailto:username@uottawa.ca">username@uottawa.ca</a></p>
+        <p>©2021 Zhiqi Zhou | <a href="mailto:zzhou169@uottawa.ca">zzhou169@uottawa.ca</a></p>
       </div>
     </div>
   </body>
